--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,9 @@
 target/
 web-app/WEB-INF/tld/c.tld
 web-app/WEB-INF/tld/fmt.tld
+
+# Bower Stuff
+bower-sources/
+web-app/css/
+web-app/images/
+web-app/js/
