--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,4 @@
 #Grails Metadata file
-#Sun Sep 07 18:01:22 PDT 2014
-app.grails.version=2.4.3
+#Fri Jan 30 13:44:29 PST 2015
+app.grails.version=2.4.4
 app.name=swaggydoc
