--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,8 @@
 *.iml
 *.ipr
 *.iws
-.idea/workspace.xml
-.idea/tasks.xml
-.idea/dictionaries
-.idea/uiDesigner.xml
-.idea/vcs.xml
+
+.idea
 classes
 out/
 
