--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,20 @@
 sudo: false
 language: groovy
 jdk:
-  - oraclejdk7
+- oraclejdk7
 before_script:
-  - rm -rf target
-  - npm install -g bower
-script: ./travis.sh
+- rm -rf target
+- npm install -g bower
+script: "./travis.sh"
 env:
   global:
-    - GIT_NAME="Rahul Somasunderam"
-    - GIT_EMAIL="rahul.som@gmail.com"
-    - GRAILS_CENTRAL_USERNAME=rahulsom
-    - secure: "lcK0atc7vh1s9oh7Z9m17VTKcXrw0AiVM57MoJkuwpbXeZ46qYGN+EThsCaSlT4VcektrhnLVklDIMDcxt0Osv8AYBiZoPFHdnR5ISYb236BJzyC3ODGx5Vj6KQQhBntBGwXTJjXUh5S018fZpbnMbuCsj9xi0KQ055gx8rnxEQ="
+  - GIT_NAME="Rahul Somasunderam"
+  - GIT_EMAIL="rahul.som@gmail.com"
+  - GRAILS_CENTRAL_USERNAME=rahulsom
+  - secure: lcK0atc7vh1s9oh7Z9m17VTKcXrw0AiVM57MoJkuwpbXeZ46qYGN+EThsCaSlT4VcektrhnLVklDIMDcxt0Osv8AYBiZoPFHdnR5ISYb236BJzyC3ODGx5Vj6KQQhBntBGwXTJjXUh5S018fZpbnMbuCsj9xi0KQ055gx8rnxEQ=
+  - secure: Py1s5CzVMB5QqaGmH+/rKyvilroqCS1b9q+ltOeTEgBI3jthrTVAnZf+hD3kTxL0OaA6on0LAObKV3Bh9A3Bpt/ZP8aizQjabBImXsJU+p7Hf0YGR4KZiQ4Y40FMnxk42I639FhDBTahL7j7+Mjj/L5jsOvYc03G8JRUMFX+5Sw=
 cache:
   directories:
-    - $HOME/.grails/wrapper
-    - $HOME/.m2
-    - $HOME/.bower/cache
+  - "$HOME/.grails/wrapper"
+  - "$HOME/.m2"
+  - "$HOME/.bower/cache"
