--- a/build.gradle
+++ b/build.gradle
@@ -27,4 +27,5 @@ dependencies {
   // compile 'org.grails.plugins:asset-pipeline:2.1.3' // Just an example of adding a Grails plugin
 
   compile 'com.wordnik:swagger-annotations:1.3.8'
+  test 'org.grails.plugins:marshallers:0.6'
 }
