--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,7 @@ gradle-app.setting
 
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 !gradle-wrapper.jar
+
+### Bower managed directories
+grails2/web-app
+grails3/grails-app/assets
