--- a/commons/build.gradle
+++ b/commons/build.gradle
@@ -15,6 +15,9 @@ repositories {
 
 dependencies {
     compile 'com.wordnik:swagger-annotations:1.3.8'
+
+    testCompile 'org.spockframework:spock-core:1.0-groovy-2.4'
+
     provided 'org.codehaus.groovy:groovy-all:2.4.4'
     provided 'org.springframework:spring-web:4.0.9.RELEASE'
     provided 'log4j:log4j:1.2.16'
