--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,7 @@ gradle-app.setting
 
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 !gradle-wrapper.jar
+.gradletasknamecache
 
 ### Bower managed directories
 grails2/web-app
