--- a/grails2/build.gradle
+++ b/grails2/build.gradle
@@ -26,7 +26,7 @@ dependencies {
   bootstrap "org.grails.plugins:release:3.0.1" // Needed for publishing plugin
   // compile 'org.grails.plugins:asset-pipeline:2.1.3' // Just an example of adding a Grails plugin
 
-  compile project(':commons')
+  compile project(':swaggydoc-commons')
   test 'org.grails.plugins:marshallers:0.6'
 }
 
