--- a/swaggydoc-grails3/build.gradle
+++ b/swaggydoc-grails3/build.gradle
@@ -62,7 +62,7 @@ dependencies {
     console "org.grails:grails-console"
 
     runtime "org.grails.plugins:asset-pipeline:3.0.6"
-    compile project(':commons')
+    compile project(':swaggydoc-commons')
 }
 
 task wrapper(type: Wrapper) {
