--- a/swaggydoc-commons/build.gradle
+++ b/swaggydoc-commons/build.gradle
@@ -6,6 +6,9 @@ buildscript {
     }
 }
 
+plugins {
+    id "com.jfrog.bintray" version "1.2"
+}
 apply plugin: 'nebula.provided-base'
 apply plugin: 'groovy'
 
