--- a/swaggydoc-commons/build.gradle
+++ b/swaggydoc-commons/build.gradle
@@ -3,12 +3,16 @@ buildscript {
 
     dependencies {
         classpath 'com.netflix.nebula:gradle-extra-configurations-plugin:2.2.+'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.5'
     }
 }
 
 plugins {
-    id "com.jfrog.bintray" version "1.2"
+    id "nebula.source-jar" version "4.4.4"
+    id "nebula.javadoc-jar" version "4.4.4"
 }
+apply plugin: 'com.jfrog.bintray'
+apply plugin: 'maven-publish'
 apply plugin: 'nebula.provided-base'
 apply plugin: 'groovy'
 
@@ -29,9 +33,38 @@ dependencies {
 
 group "com.github.rahulsom"
 
+task sourcesJar(type: Jar, dependsOn: classes) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+// add javadoc/source jar tasks as artifacts
+artifacts {
+    archives sourcesJar, javadocJar
+}
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            if (plugins.hasPlugin('war')) {
+                from components.web
+            } else {
+                from components.java
+            }
+
+            artifact sourcesJar
+            artifact javadocJar
+        }
+    }
+}
+
 bintray {
     user = System.getenv('BINTRAY_USER')
     key = System.getenv('BINTRAY_KEY')
+
+    publications = ['mavenJava']
+
+    publish = true //If version should be auto published after an upload
 
     pkg {
         repo = 'myjava'
