--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,6 @@ gradle-app.setting
 ### Bower managed directories
 grails2/web-app
 swaggydoc-grails3/grails-app/assets
+
+## Example excludes
+.asscache
