--- a/examples/swaggydoc-grails3-example/build.gradle
+++ b/examples/swaggydoc-grails3-example/build.gradle
@@ -5,6 +5,7 @@ buildscript {
     repositories {
         mavenLocal()
         maven { url "https://repo.grails.org/grails/core" }
+        maven { url "http://dl.bintray.com/rahulsom/plugins" }
     }
     dependencies {
         classpath "org.grails:grails-gradle-plugin:$grailsVersion"
@@ -40,6 +41,7 @@ assets {
 repositories {
     mavenLocal()
     maven { url "https://repo.grails.org/grails/core" }
+    maven { url "http://dl.bintray.com/rahulsom/plugins" }
 }
 
 dependencyManagement {
@@ -61,6 +63,7 @@ dependencies {
     compile "org.grails.plugins:cache"
     compile "org.hibernate:hibernate-ehcache"
     compile "org.grails.plugins:scaffolding"
+    compile "org.grails.plugins:swaggydoc-grails3:0.26.0"
 
     runtime "org.grails.plugins:asset-pipeline"
 
