--- a/swaggydoc-grails3/build.gradle
+++ b/swaggydoc-grails3/build.gradle
@@ -89,7 +89,9 @@ bintray {
 }
 
 task('generate-sources') << {
-    new File("${rootDir}/grails3/grails-app/services/com/github/rahulsom/swaggydoc/SwaggyDataService.groovy").text =
+    new File("${rootDir}/swaggydoc-grails3/grails-app/services/com/github/rahulsom/swaggydoc").mkdirs()
+
+    new File("${rootDir}/swaggydoc-grails3/grails-app/services/com/github/rahulsom/swaggydoc/SwaggyDataService.groovy").text =
             new File("${rootDir}/grails2/grails-app/services/com/github/rahulsom/swaggydoc/SwaggyDataService.groovy").text.
             replace('org.codehaus.groovy.grails','grails').
             replace('grails.commons.*','grails.core.*\nimport grails.util.GrailsClassUtils')
