Upgrade 2x example to 2.5.5

--- a/examples/swaggydoc-grails2-example/application.properties
+++ b/examples/swaggydoc-grails2-example/application.properties
@@ -1,5 +1,5 @@
 #Grails Metadata file
-#Fri Dec 11 15:19:37 PST 2015
-app.grails.version=2.5.0
+#Thu Jun 30 22:00:42 PDT 2016
+app.grails.version=2.5.5
 app.name=swaggydoc-grails2-example
 app.version=0.1
