--- a/examples/swaggydoc-grails3-example/grails-app/conf/application.yml
+++ b/examples/swaggydoc-grails3-example/grails-app/conf/application.yml
@@ -19,11 +19,7 @@ grails:
         disable:
             accept:
                 header:
-                    userAgents:
-                        - Gecko
-                        - WebKit
-                        - Presto
-                        - Trident
+                    userAgents: []
         types:
             all: '*/*'
             atom: application/atom+xml
