--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ repositories {
 }
 
 allprojects {
-  version "0.27.0"
+  version "0.28.0-SNAPSHOT"
   group "org.grails.plugins"
 }
 // In this section you declare the dependencies for your production and test code
