Fixed example for grails 2

--- a/examples/swaggydoc-grails2-example/application.properties
+++ b/examples/swaggydoc-grails2-example/application.properties
@@ -1,5 +1,6 @@
 #Grails Metadata file
-#Thu Jun 30 22:00:42 PDT 2016
-app.grails.version=2.5.5
+#Tue Jul 05 10:31:02 PDT 2016
+app.grails.version=2.5.1
 app.name=swaggydoc-grails2-example
+app.servlet.version=3.0
 app.version=0.1
